# dropbox-like-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Subject.md  compose.dev.yaml  compose.yaml
.sqlx/: query-2f40f0254c119124400f8fb47d9b4b1e799cb6b2f58ac244f92891ce23bf405e.json  query-ca8068154ddb6bc68d51ff01ea9e53e3f8c9ae5484714873a3f05de92dc934f7.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  compose.dev.yaml
backend/.sqlx/: query-8d68a5dd7f1353610db515098ab290afadf7c182edcec353778bd6cff43e44b8.json  query-a222cf09595877817bbb986cf2da8745764f57bc854153d8424ba6de0c8158f1.json  query-d434929907036d89cf79f3fabf38a7b2391d5718ddcc5e7c228639ff46ac505e.json
backend/src/: api.rs
backend/src/api/: router.rs
backend/src/api/handlers/: folders.rs  health.rs
backend/src/config/: env.rs
backend/src/db/: error.rs
backend/src/db/queries/: delete_folder.sql  get_folder.sql  patch_folder.sql
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: FolderTree.tsx  Icons.tsx
frontend/src/config/: env.ts  index.ts
frontend/src/services/: folders.ts  index.ts
frontend/src/types/: folder.ts
migrations/: 20250117210914_setup.down.sql  20250117210914_setup.up.sql
src/: main.rs
src/api/: handlers.rs  listener.rs  router.rs
src/db/: build.rs
src/db/queries/: get_root_folder.sql  post_folder.sql
